--- a/Resources/administration/src/module/sw-mail-template/component/sw-mail-header-footer-list/sw-mail-header-footer-list.html.twig
+++ b/Resources/administration/src/module/sw-mail-template/component/sw-mail-header-footer-list/sw-mail-header-footer-list.html.twig
@@ -64,7 +64,7 @@
                                 {% endblock %}
 
                                 {% block sw_mail_header_footer_list_grid_columns_actions_duplicate %}
-                                    <sw-context-menu-item :disabled="true" @click="onDuplicateMailHeaderFooter(item.id)">
+                                    <sw-context-menu-item @click="onDuplicateMailHeaderFooter(item.id)">
                                         {{ $tc('sw-mail-header-footer.list.contextMenuDuplicate') }}
                                     </sw-context-menu-item>
                                 {% endblock %}
