--- a/Resources/administration/src/module/sw-mail-template/page/sw-mail-template-detail/sw-mail-template-detail.scss
+++ b/Resources/administration/src/module/sw-mail-template/page/sw-mail-template-detail/sw-mail-template-detail.scss
@@ -6,4 +6,15 @@
             margin-bottom: 20px;
         }
     }
+
+    .sw-mail-template-detail__test-mail-sidebar {
+        .sw-mail-template-detail__test-mail-sidebar-container {
+            padding: 20px;
+            border-top: 1px solid #D8DDE6;
+
+            label {
+                font-weight: bold;
+            }
+        }
+    }
 }
