--- a/Resources/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
@@ -52,12 +52,16 @@
                 {% endblock %}
 
                     {% block sw_media_field_upload_component %}
+                        <sw-upload-store-listener
+                                :uploadTag="uploadTag"
+                                autoUpload
+                                @sw-media-upload-finished="exposeNewId">
+                        </sw-upload-store-listener>
                         <sw-media-upload
                             v-if="showUploadField"
                             variant="regular"
                             :allowMultiSelect="false"
-                            @sw-media-upload-new-uploads-added="uploadNewFile"
-                            @sw-media-upload-media-upload-success="exposeNewId">
+                            :uploadTag="uploadTag">
                         </sw-media-upload>
                     {% endblock %}
 
