--- a/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.html.twig
+++ b/Resources/administration/src/module/sw-category/component/sw-category-view/sw-category-view.html.twig
@@ -43,14 +43,17 @@
                 {% endblock %}
 
                 {% block sw_category_view_information_media %}
+                    <sw-upload-store-listener
+                        :uploadTag="category.id"
+                        @sw-media-upload-finished="setMediaItem"
+                        autoUpload>
+                    </sw-upload-store-listener>
                     <sw-media-upload
                         :label="$tc('sw-category.general.imageLabel')"
                         variant="regular"
                         :source="mediaItem"
                         :uploadTag="category.id"
                         :allowMultiSelect="false"
-                        @sw-media-upload-new-uploads-added="onUploadAdded"
-                        @sw-media-upload-media-upload-success="setMediaItem"
                         @sw-media-upload-open-sidebar="openMediaSidebar"
                         @sw-media-upload-remove-image="removeMediaItem">
                     </sw-media-upload>
