--- a/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
@@ -2,15 +2,17 @@
     <div class="sw-product-media-form">
 
         {% block sw_product_media_form_upload %}
+            <sw-upload-store-listener
+                :uploadTag="product.id"
+                @sw-media-upload-added="onUploadsAdded"
+                @sw-media-upload-finished="successfulUpload"
+                @sw-media-upload-failed="onUploadFailed">
+            </sw-upload-store-listener>
             <sw-media-upload
                     :uploadTag="product.id"
-                    :variant="'regular'"
+                    variant="regular"
                     :scrollTarget="$parent.$el"
                     :defaultFolder="product.getEntityName()"
-                    @sw-media-upload-media-upload-success="successfulUpload"
-                    @sw-media-upload-new-uploads-added="onUploadsAdded"
-                    @sw-media-upload-media-upload-failure="onUploadFailed"
-                    @sw-media-upload-media-replaced="onMediaReplaced"
                     @sw-media-upload-open-sidebar="onMediaUploadButtonOpenSidebar">
             </sw-media-upload>
         {% endblock %}
