--- a/Resources/administration/src/module/sw-profile/page/sw-profile-index/sw-profile-index.html.twig
+++ b/Resources/administration/src/module/sw-profile/page/sw-profile-index/sw-profile-index.html.twig
@@ -51,15 +51,19 @@
                              :title="$tc('sw-profile.index.titleImageCard')"
                              :isLoading="user.isLoading">
                         {% block sw_profile_index_image_card_image %}
+                            <sw-upload-store-listener
+                                :uploadTag="uploadTag"
+                                autoUpload
+                                @sw-media-upload-finished="setMediaItem">
+                            </sw-upload-store-listener>
                             <sw-media-upload
+                                :uploadTag="uploadTag"
                                 :source="avatarMediaItem"
                                 class="sw-profile-index__user-image-upload"
                                 :allowMultiSelect="false"
                                 variant="regular"
                                 :label="$tc('sw-profile.index.labelUploadAvatar')"
                                 :defaultFolder="user.entityName"
-                                @sw-media-upload-new-uploads-added="onUploadAdded"
-                                @sw-media-upload-media-upload-success="setMediaItem"
                                 @sw-media-upload-open-sidebar="openMediaSidebar"
                                 @sw-media-upload-remove-image="onUnlinkAvatar">
                             </sw-media-upload>
@@ -104,7 +108,7 @@
                                            :isParentLoading="isUserLoading"
                                            :additionalSearchCriteria="userMediaCriteria">
                         <template slot="context-menu-items" slot-scope="media">
-                            <sw-context-menu-item @click="setMediaItem(media.mediaItem)">
+                            <sw-context-menu-item @click="setMediaFromSidebar(media.mediaItem)">
                                 {{ $tc('sw-profile.index.labelUseAsAvatar') }}
                             </sw-context-menu-item>
                         </template>
