NTR - Fix incard search for customer addresses and orders

--- a/Resources/administration/src/module/sw-customer/view/sw-customer-detail-base/sw-customer-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-detail-base/sw-customer-detail-base.html.twig
@@ -54,9 +54,8 @@
                         {% endblock %}
 
                         {% block sw_customer_detail_attribute_sets %}
-                            <sw-card>
+                            <sw-card v-if="next754">
                                 <sw-attribute-set-renderer
-                                        v-if="next754"
                                         :entity="customer"
                                         :sets="customerAttributeSets">
                                 </sw-attribute-set-renderer>
