--- a/Resources/administration/src/module/sw-plugin/view/sw-plugin-list/sw-plugin-list.html.twig
+++ b/Resources/administration/src/module/sw-plugin/view/sw-plugin-list/sw-plugin-list.html.twig
@@ -58,7 +58,7 @@
                                 truncate>
                     {% block sw_plugin_list_grid_columns_customer_name_label %}
                     <div class="sw-plugin-list__plugin-info-container">
-                        <img v-if="item.iconUrl" :src="item.iconUrl" />
+                        <img v-if="item.icon" :src="'data:image/png;base64, ' + item.icon" />
                         <div class="sw-plugin-list__plugin-info">
                             <p>{{ item.label }}</p>
                             <p class="sw-plugin-list__author-name">{{ item.author }}</p>
