--- a/Resources/administration/src/app/component/utils/sw-duplicated-media/sw-duplicated-media.scss
+++ b/Resources/administration/src/app/component/utils/sw-duplicated-media/sw-duplicated-media.scss
@@ -1,7 +1,9 @@
 @import "~scss/variables";
+@import "~scss/mixins";
 
 $sw-duplicated-media-separator-color: $color-steam-cloud;
 $sw-duplicated-media-text-color: $color-gutenberg;
+$sw-duplicated-media-font-size-preview: $font-size-small;
 
 
 .sw-duplicated-media {
@@ -9,11 +11,7 @@ $sw-duplicated-media-text-color: $color-gutenberg;
         font-size: 14px;
         margin-bottom: 10px;
     }
-
-    .sw-duplicated-media__preview_label {
-        font-size: 12px;
-    }
-
+    
     .sw-duplicated-media__preview {
         margin-bottom: 35px;
     }
@@ -56,7 +54,7 @@ $sw-duplicated-media-text-color: $color-gutenberg;
         width: max-content;
     }
 
-    .sw-media-duplicated-media__target-upload {
+    .sw-duplicated-media__target-upload {
         display: grid;
         grid-template-columns: auto 1fr;
         grid-column-gap: 10px;
@@ -65,7 +63,7 @@ $sw-duplicated-media-text-color: $color-gutenberg;
         padding: 8px;
     }
 
-    .sw-media-duplicated-media__target-preview {
+    .sw-duplicated-media__target-preview {
         position: relative;
         width: 40px;
         height: 40px;
@@ -79,7 +77,12 @@ $sw-duplicated-media-text-color: $color-gutenberg;
         }
     }
 
-    .sw-media-duplicated-media__target-details {
+    .sw-duplicated-media__target-label {
+        @include truncate();
+        font-size: $sw-duplicated-media-font-size-preview;
+    }
+
+    .sw-duplicated-media__target-details {
         font-size: $font-size-small;
         color: $color-steam-cloud;
     }
