--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-or-container/sw-condition-or-container.html.twig
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-or-container/sw-condition-or-container.html.twig
@@ -27,14 +27,14 @@
                 {% endblock %}
                 {% block sw_condition_or_container_actions %}
                     <div class="sw-condition-or-container__actions">
-                        <sw-button class="sw-condition-or-container__actions--or" @click="onAddAndClick">
+                        <sw-button class="sw-condition-or-container__actions--or" @click="onAddAndClick" :disabled="isApi()">
                             {{ $tc('global.sw-condition.condition.or') }}
                         </sw-button>
-                        <sw-button v-if="level !== 0" class="sw-condition-or-container__actions--sub" @click="onAddChildClick">
+                        <sw-button v-if="level !== 0" class="sw-condition-or-container__actions--sub" @click="onAddChildClick" :disabled="isApi()">
                             {{ $tc('global.sw-condition.condition.subCondition') }}
                         </sw-button>
                         <sw-button class="sw-condition-or-container__actions--delete"
-                                   :disabled="disabledDeleteButton"
+                                   :disabled="disabledDeleteButton || isApi()"
                                    @click="onDeleteAll">
                             <span v-if="level !== 0">{{ $tc('global.sw-condition.condition.deleteConditions') }}</span>
                             <span v-else>{{ $tc('global.sw-condition.condition.deleteAllConditions') }}</span>
