--- a/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-or-container/sw-condition-or-container.scss
+++ b/Resources/administration/src/app/component/form/sw-condition-tree/sw-condition-or-container/sw-condition-or-container.scss
@@ -3,20 +3,15 @@
 $sw-condition-or-container-background-even: $color-white;
 $sw-condition-or-container-background-odd: #F0F2F5;
 $sw-condition-or-container-border: #788A9B;
-$sw-condition-or-container-button-border: #D1D9E0;
-$sw-condition-or-container-button: #52667A;
 
 .sw-condition-or-container {
-    &.container-condition-level__is--even {
-        background-color: $sw-condition-or-container-background-even;
-    }
 
     &.container-condition-level__is--odd {
         background-color: $sw-condition-or-container-background-odd;
     }
 
     .sw-condition-or-container__condition-content {
-        padding: 32px 32px 16px 32px;
+        padding: 32px;
     }
 
     .condition-content__spacer--or {
@@ -31,30 +26,15 @@ $sw-condition-or-container-button: #52667A;
         &:before {
             content: "";
             position: absolute;
-            border-top: 1px dashed $sw-condition-or-container-border;
             top: 50%;
-            width: calc(100% - 36px);
-            margin-left: 46px;
+            width: calc(100% - 40px);
+            margin-left: 48px;
+            border-top: 1px dotted $sw-condition-or-container-border;
         }
     }
 
     .sw-condition-or-container__actions {
         margin-top: 20px;
-
-        .sw-button {
-            height: 32px;
-            border: 1px solid $sw-condition-or-container-button-border;
-            border-radius: 4px;
-            padding: auto;
-        }
-
-        .sw-button__content {
-            color: $sw-condition-or-container-button;
-            font-size: 12px;
-            font-weight: 600;
-            line-height: 19px;
-            text-align: center;
-        }
 
         .sw-condition-or-container__actions--or {
             margin-right: 10px;
