--- a/Resources/administration/src/module/sw-mail-template/page/sw-mail-header-footer-detail/sw-mail-header-footer-detail.html.twig
+++ b/Resources/administration/src/module/sw-mail-template/page/sw-mail-header-footer-detail/sw-mail-header-footer-detail.html.twig
@@ -51,6 +51,17 @@
                                       v-model="mailHeaderFooter.description">
                             </sw-field>
                         {% endblock %}
+
+                        {% block sw_mail_header_footer_basic_form_sales_channels_field %}
+                            <sw-select id="salesChannels"
+                                        multi
+                                        :label="$tc('sw-mail-header-footer.detail.basic.labelSalesChannels')"
+                                        :placeholder="$tc('sw-mail-header-footer.detail.basic.placeholderSalesChannels')"
+                                        :associationStore="salesChannelAssociationStore"
+                                        :store="salesChannelStore"
+                                        v-model="mailHeaderFooter.salesChannels">
+                            </sw-select>
+                        {% endblock %}
                     </sw-card>
                 {% endblock %}
 
