--- a/Resources/administration/src/app/component/media/sw-sidebar-media-item/sw-sidebar-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-sidebar-media-item/sw-sidebar-media-item.html.twig
@@ -25,7 +25,8 @@
                             :showContextMenuButton="true"
                             :selected="false"
                             :isList="true"
-                            @sw-media-item-clicked="onNavigateToFolder(folder.id)">
+                            @sw-media-item-clicked="onNavigateToFolder(folder.id)"
+                            @sw-media-folder-item-delete="handleFolderGridItemDelete">
                         </sw-media-folder-item>
                     {% endblock %}
 
