--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-folder-info/sw-media-folder-info.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-folder-info/sw-media-folder-info.html.twig
@@ -15,17 +15,24 @@
                             </li>
                             {% endblock %}
 
-                        {% block sw_media_quickinfo_folder_quickactions_dissolve %}
-                            <li class="sw-media-sidebar__quickaction quickaction--dissolve" @click="openFolderDissolve">
-                                <sw-icon class="sw-media-sidebar__quickactions-icon"small name="default-web-loading-star"></sw-icon>
-                                {{ $tc('sw-media.sidebar.actions.dissolve') }}
-                            </li>
-                        {% endblock %}
-
                         {% block sw_media_quickinfo_folder_quickactions_settings %}
                             <li class="sw-media-sidebar__quickaction quickaction--settings" @click="openFolderSettings">
                                 <sw-icon class="sw-media-sidebar__quickactions-icon" small name="default-action-settings"></sw-icon>
                                 {{ $tc('sw-media.sidebar.actions.settings') }}
+                            </li>
+                        {% endblock %}
+
+                        {% block sw_media_quickinfo_folder_quickactions_dissolve %}
+                           <li class="sw-media-sidebar__quickaction quickaction--dissolve" @click="openFolderDissolve">
+                              <sw-icon class="sw-media-sidebar__quickactions-icon" small name="default-web-loading-star"></sw-icon>
+                              {{ $tc('sw-media.sidebar.actions.dissolve') }}
+                           </li>
+                        {% endblock %}
+
+                        {% block sw_media_quickinfo_folder_quickactions_delete %}
+                            <li class="sw-media-sidebar__quickaction is--danger quickaction--delete" @click="openModalDelete">
+                                <sw-icon class="sw-media-sidebar__quickactions-icon is--danger" small name="default-action-trash"></sw-icon>
+                                {{ $tc('sw-media.sidebar.actions.delete') }}
                             </li>
                         {% endblock %}
                     </ul>
@@ -92,6 +99,15 @@
                 @sw-media-modal-move-close="closeModalMove"
                 @sw-media-modal-move-items-moved="onFolderMoved">
             </sw-media-modal-move>
+        {% endblock %}
+
+        {% block sw_media_folder_info_modal_delete %}
+            <sw-media-modal-delete
+                    v-if="showModalDelete"
+                    :itemsToDelete="[mediaFolder]"
+                    @sw-media-modal-delete-close="closeModalDelete"
+                    @sw-media-modal-delete-items-deleted="deleteSelectedItems">
+            </sw-media-modal-delete>
         {% endblock %}
     </div>
 {% endblock %}
