--- a/Resources/administration/src/module/sw-media/component/sw-media-library/sw-media-library.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sw-media-library/sw-media-library.html.twig
@@ -65,6 +65,7 @@
                                     :isList="showItemsAsList"
                                     :editable="editable"
                                     @sw-media-media-item-delete="refreshList"
+                                    @sw-media-folder-item-delete="refreshList"
                                     @sw-media-folder-item-remove="removeNewFolder"
                                     @sw-media-folder-item-dissolve="refreshList"
                                     @sw-media-media-item-moved="refreshList"
