--- a/Resources/administration/src/module/sw-customer/view/sw-customer-detail-addresses/sw-customer-detail-addresses.html.twig
+++ b/Resources/administration/src/module/sw-customer/view/sw-customer-detail-addresses/sw-customer-detail-addresses.html.twig
@@ -30,7 +30,7 @@
                         {% block sw_customer_detail_addresses_add_modal_address_form %}
                             <sw-customer-address-form :address="currentAddress"
                                                       :countries="countries"
-                                                      :customer="customer"
+                                                      :customer="activeCustomer"
                                                       :attributeSets="customerAddressAttributeSets"
                                                       @change-default-address="onChangeDefaultAddress">
                             </sw-customer-address-form>
@@ -73,7 +73,7 @@
                                         {% block sw_customer_detail_addresses_grid_columns_default_shipping_address_radio %}
                                             <sw-field type="radio"
                                                       :disabled="!customerEditMode"
-                                                      v-model="customer.defaultShippingAddressId"
+                                                      v-model="activeCustomer.defaultShippingAddressId"
                                                       name="defaultShippingAddress"
                                                       @change="onChangeDefaultShippingAddress"
                                                       :options="[{ value: item.id }]">
@@ -91,7 +91,7 @@
                                         {% block sw_customer_detail_addresses_grid_columns_default_billing_address_radio %}
                                             <sw-field type="radio"
                                                       :disabled="!customerEditMode"
-                                                      v-model="customer.defaultBillingAddressId"
+                                                      v-model="activeCustomer.defaultBillingAddressId"
                                                       name="defaultBillingAddress"
                                                       @change="onChangeDefaultBillingAddress"
                                                       :options="[{ value: item.id }]">
